--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <footer>
         <span>Created by <a href="# ">Pratima Yadav </a><span class="far fa-copyright "></span> 2022 All copyrights reserved</span>
     </footer>
-    <script src="../PratimaYadav/script.js "></script>
+    <script src="script.js "></script>
 </body>
 
 </html>
