--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="../PratimaYadav/images/pic2.jpg" alt="">
+                    <img src="images/pic2.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="justtext">I am Pratima and I am a <span class="typing-2"></span></div>
                     <p>I am motivated and driven. I thrive on challenge and constantly set goals for myself, so I have something to strive towards. I am looking for a Oppurtunity that will enable me to creatively showcase talents all the while challenging
                         me to adapt new skills processes needed to advance within my choosen career path. Intersetd in Web Development and Data science.
                     </p>
-                    <a href="../PratimaYadav/PratimaYadavResume.pdf" download="Pratima Yadav">Download Resume</a>
+                    <a href="PratimaYadavResume.pdf" download="Pratima Yadav">Download Resume</a>
                 </div>
             </div>
         </div>
